--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "youtube-api-search": "0.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
